# zephyr

./: .gitignore
boards/arm/mps3/: mps3_common.dtsi  mps3_corstone300_fvp.dts  mps3_corstone300_fvp.yaml
cmake/modules/: FindTargetTools.cmake
include/zephyr/arch/arm/cortex_m/scripts/: linker.ld
modules/executorch/: CMakeLists.txt  Kconfig
samples/modules/executorch/arm-fvp-tutorial/: README.md
samples/modules/executorch/arm-fvp-tutorials/: Dockerfile.armfvp_zephyr  README.md  build_model.py
samples/modules/executorch/arm-fvp-tutorials/models/: CMakeLists.txt  README.md  linker.ld  mps3_corstone300_fvp_relocation.ld  output_verifier.cpp  output_verifier.hpp  prj.conf
samples/modules/executorch/arm-fvp-tutorials/models/add/: CMakeLists.txt
samples/modules/executorch/arm-fvp-tutorials/models/add/src/: arm_executor_runner.cpp
samples/modules/executorch/arm-fvp-tutorials/models/mv2/: CMakeLists.txt  README.md  imagenet_relocation.ld  prj.conf
samples/modules/executorch/arm-fvp-tutorials/models/mv2/src/: arm_executor_runner.cpp  imagenet_classes.h  mv2_output_verifier.cpp  mv2_output_verifier.hpp  samoyed_dog_tensor_input.h
samples/modules/executorch/arm-fvp-tutorials/models/softmax/: CMakeLists.txt  prj.conf
samples/modules/executorch/arm-fvp-tutorials/models/softmax/src/: arm_executor_runner.cpp
samples/modules/executorch/arm-fvp-tutorials/models/src/: arm_executor_runner.cpp
samples/modules/executorch/arm/hello_world/: CMakeLists.txt  README.rst  add_arm_delegate_ethos-u55-128.pte  build_model.py  build_west_flash_data.out  gen_ops_def.yml  linker.ld  prj.conf  prj_selective.conf  validate_setup.py  zephyr_elf_nm_newest.txt
samples/modules/executorch/arm/hello_world/boards/: mps3_corstone300_fvp_overlay.txt
samples/modules/executorch/arm/hello_world/example_files/: export_add.py  export_softmax.py
samples/modules/executorch/arm/hello_world/src/: arm_executor_runner.cpp  arm_memory_allocator.hpp  arm_zephyr_pal.hpp  et_memory_allocator.hpp  main.cpp  model_pte.h  program_loader.cpp  program_loader.h
samples/modules/executorch/hello_world/: validate_setup.py
samples/modules/executorch/scripts/: build_model.py
submanifests/: optional.yaml
